# test-app-engine

./: .gitignore  CLAUDE.md  README.md  app.yaml  main.py  pyproject.toml  todo-app-spec.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  test.yml
src/todo_app/: __init__.py  main.py
src/todo_app/templates/: index.html
tests/: test_main.py
